--- a/Sonar_Rock_vs_Mine_Pridiction_With_python.ipynb
+++ b/Sonar_Rock_vs_Mine_Pridiction_With_python.ipynb
@@ -252,7 +252,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 255
+          "height": 235
         },
         "id": "wair1vscMnLF",
         "outputId": "e9160536-53e2-4aa1-85ad-2e7a1bb0ed96"
@@ -3425,14 +3425,14 @@
     {
       "cell_type": "code",
       "source": [
-        "input_data = (0.0335,0.0134,0.0696,0.1180,0.0348,0.1180,0.1948,0.1607,0.3036,0.4372,0.5533,0.5771,0.7022,0.7067,0.7367,0.7391,0.8622,0.9458,0.8782,0.7913,0.5760,0.3061,0.0563,0.0239,0.2554,0.4862,0.5027,0.4402,0.2847,0.1797,0.3560,0.3522,0.3321,0.3112,0.3638,0.0754,0.1834,0.1820,0.1815,0.1593,0.0576,0.0954,0.1086,0.0812,0.0784,0.0487,0.0439,0.0586,0.0370,0.0185,0.0302,0.0244,0.0232,0.0093,0.0159,0.0193,0.0032,0.0377,0.0126,0.0156,)\n",
+        "input_data = (0.0291,0.0400,0.0771,0.0809,0.0521,0.1051,0.0145,0.0674,0.1294,0.1146,0.0942,0.0794,0.0252,0.1191,0.1045,0.2050,0.1556,0.2690,0.3784,0.4024,0.3470,0.1395,0.1208,0.2827,0.1500,0.2626,0.4468,0.7520,0.9036,0.7812,0.4766,0.2483,0.5372,0.6279,0.3647,0.4572,0.6359,0.6474,0.5520,0.3253,0.2292,0.0653,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.0000,0.0056,0.0237,0.0204,0.0050,0.0137,0.0164,0.0081,0.0139,0.0111,)\n",
         "#let's make a numpy array for that system because a numpy array are easy to use and make a faster that a normal array..\n",
         "input_data_as_numpy_array = np.asarray(input_data)"
       ],
       "metadata": {
         "id": "000HzikrgOJl"
       },
-      "execution_count": 79,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -3443,7 +3443,7 @@
       "metadata": {
         "id": "7Nss6zPDjKXI"
       },
-      "execution_count": 80,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -3454,7 +3454,7 @@
       "metadata": {
         "id": "wO9ZctIGkwYm"
       },
-      "execution_count": 81,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -3472,16 +3472,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-oCA1-Itk_SK",
-        "outputId": "a657c526-0333-4948-d1df-f7b2d443d9f0"
+        "outputId": "77312fa9-f9f1-465a-9ba5-ae0498ecb1fb",
+        "collapsed": true
       },
-      "execution_count": 82,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['M']\n",
-            "that object is a MINE\n"
+            "['R']\n",
+            "that object is a ROCK\n"
           ]
         }
       ]
@@ -3490,7 +3491,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcThLdSlvzWSvWjIsWMeiv",
+      "authorship_tag": "ABX9TyNlFoRPitNiZLORBfmzA4dl",
       "include_colab_link": true
     },
     "kernelspec": {
